--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   
   <footer>
-    Made with ❤️ in London.
+    Kendi hundi si chal chakna bna de.
   </footer>
   <script src="./index.js" charset="utf-8"></script> 
 </body>
